DevTools: Don't crash when text nodes are edited to be whitespace

DevTools ignores whitespace-only text nodes. But if a text node
that previously had text becomes whitespace-only, no childNodeRemoved
event is fired and DevTools would get confused.

Bug: 880372
Change-Id: I8f740a6e32d1c1a15a32443a2a702996028f64fa
Reviewed-on: https://chromium-review.googlesource.com/c/1257899
Commit-Queue: Joel Einbinder <einbinder@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596443}